# NR_Analyser

./: .coverage  .gitignore  ExtendedTableModel.py  MANIFEST.in  NRTI_NRCA_Explorer.md  PeakDetection.py  README.md  Whole_Program.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
GUI Files/: Peak_limits.txt
GUI Files/Peak information/: 03-Li_n-g  05-B_n-tot  06-C_n-g  07-N_n-g  07-N_n-tot  08-O_n-g  09-F_n-g  09-F_n-tot  10-Ne-20_n-g  10-Ne-20_n-tot  10-Ne-21_n-g  10-Ne-21_n-tot  10-Ne-21_n-tot.csv  10-Ne-22_n-g  10-Ne-22_n-tot  10-Ne_n-g  10-Ne_n-tot  11-Na-23_n-g  11-Na-23_n-tot  11-Na_n-g  11-Na_n-tot  11-Na_n-tot.csv  12-Mg-24_n-g  12-Mg-24_n-tot  12-Mg-25_n-g  12-Mg-25_n-tot  12-Mg-26_n-g  12-Mg-26_n-tot  12-Mg_n-g  12-Mg_n-tot  13-Al-27_n-g  13-Al-27_n-tot  13-Al_n-tot  14-Si-28_n-g  14-Si-28_n-tot  14-Si-29_n-g  14-Si-29_n-tot  14-Si-30_n-g  14-Si-30_n-tot  14-Si_n-g  (+808 more)
data/: 10-Ne-20_n-g.csv  10-Ne-20_n-g.txt  10-Ne-20_n-tot.csv  10-Ne-20_n-tot.txt  10-Ne-21_n-g.txt  10-Ne-21_n-tot.txt  10-Ne-22_n-g.txt  10-Ne-22_n-tot.txt  11-Na-23_n-g.csv  11-Na-23_n-g.txt  11-Na-23_n-tot.csv  11-Na-23_n-tot.txt  12-Mg-24_n-g.csv  12-Mg-24_n-g.txt  12-Mg-24_n-tot.txt  12-Mg-25_n-g.txt  12-Mg-25_n-tot.txt  12-Mg-26_n-g.csv  12-Mg-26_n-g.txt  12-Mg-26_n-tot.csv  12-Mg-26_n-tot.txt  13-Al-27_n-g.txt  13-Al-27_n-tot.csv  13-Al-27_n-tot.txt  14-Si-28_n-g.txt  14-Si-28_n-tot.txt  14-Si-29_n-g.txt  14-Si-29_n-tot.txt  14-Si-30_n-g.csv  14-Si-30_n-g.txt  14-Si-30_n-tot.csv  14-Si-30_n-tot.txt  15-P-31_n-g.txt  15-P-31_n-tot.txt  16-S-32_n-g.txt  16-S-32_n-tot.txt  16-S-33_n-g.csv  16-S-33_n-g.txt  16-S-33_n-tot.txt  16-S-34_n-g.txt  (+887 more)
src/: NR Analyser.py  NRTI_NRCA_Explorer.py  config.json  data_extraction.py  data_extraction_phase2.py  databaseFill.py
src/NRTI_NRCA_GUI_Viewing_Database.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt  requires.txt
src/data/: 10-Ne-21_n-g.csv  10-Ne-21_n-tot.csv  10-Ne-22_n-g.csv  10-Ne-22_n-tot.csv  12-Mg-24_n-tot.csv  12-Mg-25_n-g.csv  13-Al-27_n-g.csv  14-Si-28_n-g.csv  15-P-31_n-tot.csv  (+372 more)
test/: conftest.py  test_app  test_project.py
tests/: test_app.py  test_elementData.py  test_helpers.py  test_spectraData.py  wrapindisplay.py
(+6825 files in other folders)
