[metadata]
name = project
description = NRTI/NRCA GUI Viewing Database, Graphing and Assisted Computation Program
author = Ryan Horrell

platforms = linux, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
package_dir = 
    = src
packages = 
    project

install_requires = 
    matplotlib>=3
    numpy>=1
    pandas>=2
    PyQt5>=5
    pyqt5-plugins>=5
    pyqt5-tools>=5
    scipy>=1

python_requires = >=3.10
include_package_data = True

zip_safe = no
namespace_packages=["src"]

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-qt>=4.0
    mypy>=1.0
    flake8>=3.9
    tox>=4.0

[options.package_data]
project = py.typed

[flake8]
max-line-length = 120

[pytest]
flake8-select = E,W,F,N,C
flake8-max-line-length = 120
ignore = E402