[metadata]
name = NRTI_NRCA_GUI_Viewing_Database
description = NRTI/NRCA GUI Viewing Database, Graphing and Assisted Computation Program
author = Ryan Horrell

platforms = linux, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
package_dir = 
    = src
packages = find:

install_requires = 
    matplotlib>=3
    numpy>=1
    pandas>=2
    PyQt6>=6
    pyqt6-plugins>=6
    pyqt6-tools>=6
    scipy>=1

python_requires = >=3.8
include_package_data = True

zip_safe = no

[options.extras_require]
testing =
    flake8>=3.9
    tox>=4.0

[options.package_data]
project = py.typed

[flake8]
max-line-length = 120
ignore = E402

[pytest]
flake8-select = E,W,F,N,C
flake8-max-line-length = 120
